<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amcaicedo.sena.appdictionary.WelcomeActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digita_nombre">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digita_apellido"
        android:layout_below="@id/tilNombre">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAceptar"
        style="@style/ButtonAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_below="@id/tilApellido"/>

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="@dimen/subtitulos"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/btnAnimales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonAccent"
                android:text="@string/animales"/>
            <Button
                android:id="@+id/btnColores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonAccent"
                android:text="@string/colores"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btnFrutas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonAccent"
                android:text="@string/frutas"/>
            <Button
                android:id="@+id/btnSaludos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonAccent"
                android:text="@string/saludos"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
