<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plantilla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.amcaicedo.sena.appdictionary.PlantillaActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_plantilla"
        android:textSize="@dimen/titulos"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_below="@id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/lytPlantilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitulo"
            android:stretchColumns="*">

            <TableRow>
                <ImageView
                    android:id="@+id/imgS1"
                    android:src="@mipmap/imggeneral"
                    android:scaleType="matrix"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvTextoUnoS1"
                    android:text="@string/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>

                <TextView
                    android:id="@+id/tvTextoDosS1"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btnTraducirS1"
                    android:text="@string/traducir"
                    style="@style/ButtonAccent"/>
            </TableRow>

            <!-- Salto de elemento -->

            <TableRow>
                <ImageView
                    android:id="@+id/imgS2"
                    android:src="@mipmap/imggeneral"
                    android:scaleType="matrix"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvTextoUnoS2"
                    android:text="@string/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>

                <TextView
                    android:id="@+id/tvTextoDosS2"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btnTraducirS2"
                    android:text="@string/traducir"
                    style="@style/ButtonAccent"/>
            </TableRow>


            <!-- Salto de elemento -->

            <TableRow>
                <ImageView
                    android:id="@+id/imgS3"
                    android:src="@mipmap/imggeneral"
                    android:scaleType="matrix"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvTextoUnoS3"
                    android:text="@string/texto"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>

                <TextView
                    android:id="@+id/tvTextoDosS3"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitulos"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btnTraducirS3"
                    android:text="@string/traducir"
                    style="@style/ButtonAccent"/>
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>
